Change Schedule to Preliminary Schedule on nijmegen.html

--- a/nijmegen.html
+++ b/nijmegen.html
@@ -68,7 +68,7 @@
             </div>
 
             <div class="ceremony-schedule">
-                <h3>Schedule</h3>
+                <h3>Preliminary Schedule</h3>
                 <div class="schedule-item">
                     <span class="time">18:00</span>
                     <span class="event"><strong>Dinner at <a href="https://ayanijmegen.nl" target="_blank">Aya</a></strong><br>Nijmegen</span>
