Fine-tune ceremony.html phrasing for family members

--- a/ceremony.html
+++ b/ceremony.html
@@ -38,6 +38,7 @@
                     <h3>Accommodation</h3>
                     <p><strong>Møns Klint, Denmark</strong></p>
                     <p>Our guests will be staying at Møns Klint, another stunning cliff formation in Denmark. The accommodation offers beautiful views and a peaceful setting for our wedding weekend.</p>
+                    <p>Accommodation is available from September 4-8, so you may arrive early and/or stay longer if you wish.</p>
                 </div>
 
                 <div class="detail-card">
@@ -55,7 +56,7 @@
                 <div class="detail-card">
                     <h3>Attire</h3>
                     <p><strong>Formal/Semi-formal</strong></p>
-                    <p>Given the outdoor cliff-top setting, we recommend elegant attire suitable for outdoor conditions. Consider the coastal weather and comfortable shoes for walking on natural terrain.</p>
+                    <p>Given the outdoor cliff-top setting, we recommend elegant attire suitable for outdoor conditions. Please consider the coastal weather and comfortable shoes for walking on natural terrain.</p>
                 </div>
 
                 <div class="detail-card">
@@ -72,15 +73,15 @@
                 </div>
                 <div class="schedule-item">
                     <span class="time">14:00</span>
-                    <span class="event"><strong>Reception</strong><br>Snacks, drinks, and photos following the ceremony</span>
+                    <span class="event"><strong>Reception</strong><br>Snacks, refreshing beverages, and photos following the ceremony</span>
                 </div>
                 <div class="schedule-item">
                     <span class="time">15:30</span>
-                    <span class="event"><strong>Free Time</strong><br>Guests are welcome to explore Stevns Klint while we take dedicated wedding photos</span>
+                    <span class="event"><strong>Free Time</strong><br>You are welcome to explore Stevns Klint while we take dedicated wedding photos</span>
                 </div>
                 <div class="schedule-item">
                     <span class="time">19:00</span>
-                    <span class="event"><strong>Dinner & Celebration</strong><br>Møns Klint</span>
+                    <span class="event"><strong>Dinner & Celebration</strong><br>Delicious meal with refreshing beverages at Møns Klint</span>
                 </div>
             </div>
 
