Update odense.html: remove dress code and change to cake and tea/coffee

--- a/odense.html
+++ b/odense.html
@@ -32,7 +32,7 @@
                     <h3>What to Expect</h3>
                     <ul>
                         <li>Warm welcome gathering</li>
-                        <li>Danish-inspired cuisine and drinks</li>
+                        <li>Cake and Tea & Coffee</li>
                         <li>Cozy hygge atmosphere</li>
                         <li>Music and dancing</li>
                         <li>Celebration with Danish friends</li>
@@ -54,9 +54,9 @@
                 <div class="detail-card">
                     <h3>What to Bring</h3>
                     <ul>
-                        <li>Festive attire (smart casual)</li>
+                        <li>Wear whatever makes you comfortable - no dress code!</li>
                         <li>Your celebratory spirit!</li>
-                        <li>Appetite for Danish treats</li>
+                        <li>Appetite for cake and cozy conversation</li>
                         <li>Your artistic spirit for our watercolor guestbook!</li>
                     </ul>
                     <p><strong>No gifts needed!</strong> Your presence is the only present we want. We'll provide watercolors and everything needed for our special guestbook activity.</p>
