--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <h3>Nijmegen Satellite</h3>
                     <p class="location">📍 Nijmegen, Netherlands</p>
                     <p class="date">August 6, 2025</p>
-                    <p class="description">Celebrating with our Dutch friends in their home city.</p>
+                    <p class="description">Celebrating with our friends in the Netherlands.</p>
                     <a href="nijmegen.html" class="btn">Learn More</a>
                 </div>
 
