--- a/nijmegen.html
+++ b/nijmegen.html
@@ -25,7 +25,7 @@
             <div class="details-grid">
                 <div class="detail-card">
                     <h3>About This Celebration</h3>
-                    <p>Our wedding warm-up celebration brings together friends for a festive evening in the Netherlands. We'll enjoy delicious food, drinks, and great company as we kick off our wedding festivities with our Dutch friends!</p>
+                    <p>Our wedding warm-up celebration brings together friends for a festive evening in the Netherlands. We'll enjoy delicious food, drinks, and great company as we kick off our wedding festivities with our friends in the Netherlands!</p>
                 </div>
 
                 <div class="detail-card">
@@ -75,17 +75,10 @@
                 </div>
                 <div class="schedule-item">
                     <span class="time">21:00</span>
-                    <span class="event"><strong>Drinks at <a href="https://bar-cali.nl" target="_blank">Bar Cali</a></strong><br>Nijmegen</span>
+                    <span class="event"><strong>Drinks at <a href="https://bar-cali.nl" target="_blank">Bar Cali</a></strong>, or elsewhere.<br>Nijmegen</span>
                 </div>
             </div>
-
-            <div class="rsvp-section">
-                <h3>RSVP</h3>
-                <p>Please let us know if you can join us for this special celebration!</p>
-                <p>More details including exact venue, date, and time will be shared with invited guests.</p>
-            </div>
         </section>
-
     </main>
 
     <footer>
