--- a/ceremony.html
+++ b/ceremony.html
@@ -36,6 +36,9 @@
                     <h3>About Stevns Klint</h3>
                     <p><strong>Stevns Klint, Denmark</strong></p>
                     <p>Stevns Klint is a spectacular chalk cliff formation on the Danish coast, recognized as a UNESCO World Heritage site. The dramatic white cliffs rising from the Baltic Sea create an unforgettable setting for our ceremony.</p>
+                    <div class="location-image">
+                        <img src="assets/img/IMG_6521.jpeg" alt="Stevns Klint church at the cliff edge" />
+                    </div>
                 </div>
 
                 <div class="detail-card">
@@ -88,6 +91,27 @@
                 <div class="schedule-item">
                     <span class="time">19:00</span>
                     <span class="event"><strong>Dinner & Celebration</strong><br>Delicious meal with refreshing beverages at Møns Klint</span>
+                </div>
+            </div>
+
+            <div class="activities-section">
+                <h3>Things to Do in the Area</h3>
+                <p>Since accommodation is available from September 4-8, you're welcome to explore the beautiful Danish countryside and attractions in the region. Here are some suggestions for your stay:</p>
+                
+                <div class="activities-grid">
+                    <div class="activity-card">
+                        <h4>🚢 Viking Ship Museum</h4>
+                        <p><strong>Roskilde, Denmark</strong></p>
+                        <p>Discover Denmark's Viking heritage at this fascinating museum featuring original Viking ships and interactive exhibitions. Perfect for history enthusiasts!</p>
+                        <p><a href="https://www.vikingeskibsmuseet.dk/de/" target="_blank">Visit Website</a></p>
+                    </div>
+                    
+                    <div class="activity-card">
+                        <h4>🌍 Geo Center Møns Klint</h4>
+                        <p><strong>Møns Klint, Denmark</strong></p>
+                        <p>Experience the geological wonders of Møns Klint at this interactive center. Learn about the dramatic chalk cliffs, fossils, and natural history of the area where you'll be staying.</p>
+                        <p><a href="https://moensklint.dk/de/" target="_blank">Visit Website</a></p>
+                    </div>
                 </div>
             </div>
 
