--- a/nijmegen.html
+++ b/nijmegen.html
@@ -33,7 +33,7 @@
                     <ul>
                         <li>Gezellig gathering with friends</li>
                         <li>Delicious Asian cuisine</li>
-                        <li>Festive dinner and drinks afterwards</li>
+                        <li>Cozy dinner and drinks afterwards</li>
                         <li>Informal, relaxed atmosphere</li>
                     </ul>
                 </div>
