--- a/nijmegen.html
+++ b/nijmegen.html
@@ -58,7 +58,7 @@
                         <li>Ready to have fun with friends</li>
                         <li>Your artistic spirit for our watercolor guestbook!</li>
                     </ul>
-                    <p><strong>No gifts needed!</strong> Your presence is the only present we want. We'll provide watercolors and everything needed for our special guestbook activity.</p>
+                    <p><strong>No gifts needed!</strong> Your presence is the only present we want. We'll provide watercolors and everything needed for our special guestbook activity. If you really want to still bring something, a card or a vegan chocolate treat would be lovely!</p>
                 </div>
 
                 <div class="detail-card">
