--- a/ceremony.html
+++ b/ceremony.html
@@ -67,9 +67,16 @@
                 </div>
 
 
+                <div class="detail-card photo-card">
+                    <h3>Our Engagement</h3>
+                    <img src="assets/img/IMG_6416.jpeg" alt="Our engagement photo" class="couple-photo">
+                    <p><em>The moment we decided to share our love with the world!</em></p>
+                </div>
+
                 <div class="detail-card">
                     <h3>Gifts & Wishlist</h3>
                     <p>Your presence at our special day is the greatest gift of all! If you would like to give us something, we have created a wishlist to help guide your choice.</p>
+                    <p><em>Please note: We don't expect to receive everything on the list - it's simply meant to give you ideas if you'd like to give a gift!</em></p>
                     <p><a href="https://www.wunschzettel.de/MundL" target="_blank">View Our Wishlist</a></p>
                 </div>
             </div>
