--- a/nijmegen.html
+++ b/nijmegen.html
@@ -25,7 +25,7 @@
             <div class="details-grid">
                 <div class="detail-card">
                     <h3>About This Celebration</h3>
-                    <p>Our wedding warm-up celebration brings together friends for a festive evening in the Netherlands. We'll enjoy delicious food, drinks, and great company as we kick off our wedding festivities with our friends in the Netherlands!</p>
+                    <p>Our wedding warm-up celebration brings together friends for a cozy evening in the Netherlands. We'll enjoy delicious food, drinks, and great company as we kick off our wedding festivities with our friends in the Netherlands!</p>
                 </div>
 
                 <div class="detail-card">
