--- a/ceremony.html
+++ b/ceremony.html
@@ -84,6 +84,10 @@
             <div class="ceremony-schedule">
                 <h3>Schedule</h3>
                 <div class="schedule-item">
+                    <span class="time">12:30</span>
+                    <span class="event"><strong>Arrival at Church</strong><br>Old Church, Stevns Klint</span>
+                </div>
+                <div class="schedule-item">
                     <span class="time">13:00</span>
                     <span class="event"><strong>Wedding Ceremony</strong><br>Old Church, Stevns Klint</span>
                 </div>
