--- a/odense.html
+++ b/odense.html
@@ -11,7 +11,7 @@
         <nav>
         </nav>
         <h1>Odense Satellite</h1>
-        <p>Pre-wedding celebration in Denmark</p>
+        <p>Cake celebration in Denmark</p>
     </header>
 
     <main>
@@ -19,23 +19,24 @@
             <div class="event-hero">
                 <h2>August 23, 2025</h2>
                 <p class="location">📍 Odense, Denmark</p>
-                <p class="subtitle">Join us in Odense!</p>
+                <p class="subtitle">Join us for cake and coffee!</p>
             </div>
 
             <div class="details-grid">
                 <div class="detail-card">
                     <h3>About This Celebration</h3>
-                    <p>Our wedding warm-up celebration brings together friends for a festive evening in Denmark. We'll enjoy delicious food, drinks, and great company as we kick off our wedding festivities with our Danish friends!</p>
+                    <p>Join us for a relaxed cake celebration! Come and go as you please between 14:00 and 19:00. We'll have delicious cake, coffee, tea, and cozy conversation as we celebrate with our Danish friends in a casual, drop-in format.</p>
                 </div>
 
                 <div class="detail-card">
                     <h3>What to Expect</h3>
                     <ul>
-                        <li>Warm welcome gathering</li>
-                        <li>Cake and Tea & Coffee</li>
+                        <li>Come and go between 14:00-19:00</li>
+                        <li>Delicious cake and pastries</li>
+                        <li>Coffee, tea, and soft drinks</li>
                         <li>Cozy hygge atmosphere</li>
-                        <li>Music and dancing</li>
-                        <li>Celebration with Danish friends</li>
+                        <li>Relaxed mingling with friends</li>
+                        <li>No formal schedule - just enjoy!</li>
                     </ul>
                 </div>
 
@@ -59,19 +60,28 @@
                         <li>Appetite for cake and cozy conversation</li>
                         <li>Your artistic spirit for our watercolor guestbook!</li>
                     </ul>
-                    <p><strong>No gifts needed!</strong> Your presence is the only present we want. We'll provide watercolors and everything needed for our special guestbook activity.</p>
+                    <p><strong>No gifts needed!</strong> Your presence is the only present we want. We'll provide watercolors and everything needed for our special guestbook activity. If you really want to bring something, a card or a vegan chocolate treat would be lovely!</p>
                 </div>
 
                 <div class="detail-card">
-                    <h3>Danish Hygge</h3>
-                    <p>Experience the Danish concept of hygge - a cozy, warm atmosphere that brings people together. Our celebration will embody this Danish tradition of creating memorable moments with loved ones.</p>
+                    <h3>Flexible Timing</h3>
+                    <p><strong>14:00 - 19:00</strong></p>
+                    <p>This is a come-and-go celebration! No need to stay for the entire time - drop by whenever works for you during these hours. Whether you can only stop by for 30 minutes or want to stay the whole afternoon, you're welcome!</p>
+                </div>
+            </div>
+
+            <div class="ceremony-schedule">
+                <h3>Event Schedule</h3>
+                <div class="schedule-item">
+                    <span class="time">14:00 - 19:00</span>
+                    <span class="event"><strong>Cake & Coffee Celebration</strong><br>Come and go as you please</span>
                 </div>
             </div>
 
             <div class="rsvp-section">
                 <h3>RSVP</h3>
-                <p>Please let us know if you can join us for this special Danish celebration!</p>
-                <p>More details including exact venue, date, and time will be shared with invited guests.</p>
+                <p>Please let us know if you can join us for this relaxed cake celebration!</p>
+                <p>More details including exact venue will be shared with invited guests.</p>
             </div>
         </section>
 
