--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <h3>Odense Satellite</h3>
                     <p class="location">📍 Odense, Denmark</p>
                     <p class="date">August 23, 2025</p>
-                    <p class="description">Celebrating with our Danish friends in their home city.</p>
+                    <p class="description">Join us for cake and coffee! Come and go as you please between 14:00 and 19:00.</p>
                     <a href="odense.html" class="btn">Learn More</a>
                 </div>
 
@@ -65,7 +65,7 @@
                 <div class="timeline-marker"></div>
                 <div class="timeline-content">
                     <h4>Odense Satellite</h4>
-                    <p>August 23, 2025 - Pre-wedding celebration in Denmark</p>
+                    <p>August 23, 2025 - Cake celebration in Denmark</p>
                 </div>
             </div>
             <div class="timeline-item">
