--- a/odense.html
+++ b/odense.html
@@ -25,13 +25,13 @@
             <div class="details-grid">
                 <div class="detail-card">
                     <h3>About This Celebration</h3>
-                    <p>Join us for a relaxed cake celebration! Come and go as you please between 14:00 and 18:00. We'll have delicious cake, coffee, tea, and cozy conversation as we celebrate with our friends in Denmark in a casual, drop-in format.</p>
+                    <p>Join us for a relaxed cake celebration! Come and go as you please during the afternoon. We'll have delicious cake, coffee, tea, and cozy conversation as we celebrate with our friends in Denmark in a casual, drop-in format.</p>
                 </div>
 
                 <div class="detail-card">
                     <h3>What to Expect</h3>
                     <ul>
-                        <li>Come and go between 14:00-18:00</li>
+                        <li>Come and go during the afternoon</li>
                         <li>Delicious cake and pastries</li>
                         <li>Coffee, tea, and soft drinks</li>
                         <li>Cozy hygge atmosphere</li>
@@ -65,8 +65,7 @@
 
                 <div class="detail-card">
                     <h3>Flexible Timing</h3>
-                    <p><strong>14:00 - 18:00</strong></p>
-                    <p>This is a come-and-go celebration! No need to stay for the entire time - drop by whenever works for you during these hours. Whether you can only stop by for 30 minutes or want to stay the whole afternoon, you're welcome!</p>
+                    <p>This is a come-and-go celebration! No need to stay for the entire time - drop by whenever works for you during the afternoon. Whether you can only stop by for 30 minutes or want to stay the whole time, you're welcome!</p>
                 </div>
             </div>
 
