--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <h3>Odense Satellite</h3>
                     <p class="location">📍 Odense, Denmark</p>
                     <p class="date">August 23, 2025</p>
-                    <p class="description">Join us for cake and coffee! Come and go as you please between 14:00 and 19:00.</p>
+                    <p class="description">Join us for cake and coffee! Come and go as you please during the afternoon.</p>
                     <a href="odense.html" class="btn">Learn More</a>
                 </div>
 
