--- a/gallery.html
+++ b/gallery.html
@@ -9,13 +9,13 @@
 <body>
     <header>
         <h1>Photo Gallery</h1>
-        <p>Moments from our engagement photo session</p>
+        <p>Moments from our wedding</p>
     </header>
 
     <main>
         <section class="gallery-section">
             <div class="gallery-intro">
-                <p>These special moments were captured during our engagement photo session. Click any photo to view it in full size.</p>
+                <p>These special moments were captured during our wedding. Click any photo to view it in full size.</p>
                 <p><em>Photos by <a href="https://www.instagram.com/photoborodina/" target="_blank">@photoborodina</a></em></p>
             </div>
 
