--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
                 </div>
 
                 <div class="event-card">
-                    <img src="assets/img/gallery/Melanie_Lukas_122.jpg" alt="Engagement photo preview" class="event-card-image">
+                    <img src="assets/img/gallery/Melanie_Lukas_122.jpg" alt="Wedding photo preview" class="event-card-image">
                     <h3>Photo Gallery</h3>
-                    <p class="location">📸 Engagement Photos</p>
-                    <p class="description">View beautiful moments from our engagement photo session.</p>
+                    <p class="location">📸 Wedding Photos</p>
+                    <p class="description">View beautiful moments from our wedding photo session.</p>
                     <a href="gallery.html" class="btn">View Gallery</a>
                 </div>
             </div>
